<resources>
    <string name="app_name">AssetManage</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="login_name_label">用户名</string>
    <string name="login_real_name_label">真实姓名</string>
    <string name="login_pwd_label">密码</string>
    <string name="login_text">登录</string>
    <string name="register_text">注册</string>
    <string name="login_set_password">设置密码</string>
    <string name="client_login_text">先试用</string>
    <string name="login_password_verify">再输一次密码</string>
    <string name="login_email_label">邮箱</string>
    <string name="login_sex_label">性别</string>
    <string name="login_phone_label">手机号码</string>
    <string name="login_verify_code_label">获取验证码</string>
    <string name="login_idcard_label">身份证</string>
    <string name="login_forget_password">忘记密码</string>
    <string name="login_accurate_info">请准确填写注册信息</string>
    <string name="login_input_name">请输入您的用户名</string>
    <string name="login_register_input_phone">请输入常用的手机号码</string>
    <string name="login_input_password">请输入登录密码</string>
    <string name="login_input_password_hint">请输入6-16位字母、数字或特殊符号的登录密码</string>
    <string name="login_recommend_phone">推荐人手机号码(非必填)</string>
    <string name="login_picture_code">请输入图形验证码</string>
    <string name="login_sms_code">请输入手机验证码</string>
    <string name="login_id_card_last_number_hint">请输入您的身份证后六位</string>
    <string name="login_id_card_hint">请输入您的身份证号</string>
    <string name="login_old_pwd_hint">请输入旧的登录密码</string>
    <string name="login_new_pwd_hint">请输入新的登录密码</string>
    <string name="login_confirm_pwd_hint">请输入确认登录密码</string>
    <string name="login_get_sms_code">获取验证码</string>
    <string name="login_register_password_error">密码须为6-16位字母、数字或特殊符号两两混合！</string>
    <string name="login_register_phone_error">请输入正确的手机号!</string>
    <string name="login_register_picture_error">请输入正确的图形验证码</string>
    <string name="login_confirm">确定</string>
    <string name="login_pwd">登录密码</string>
    <string name="login_now">立即登录</string>
    <string name="login_read_vip_agreement">我已阅读并接受《用户注册及授权协议》</string>
    <string name="login_read_vip_agreement_error">请阅读并接受中安信业用户注册及授权协议！</string>
    <string name="login_read_register_agreement_error">请阅读并接受中安信业注册协议！</string>
    <string name="login_read_register_agreement">我已阅读并接受《注册协议》</string>
    <string name="login_vip_agreement">用户注册及授权协议</string>
    <string name="login_register_agreement">注册协议</string>
    <string name="login_direct">请直接登录</string>
    <string name="login_img_hint">请输入图形以完成安全验证</string>
    <string name="register_welcome">欢迎来到财务管理系统,请注册</string>
    <string name="login_pwd_login">账户密码登录</string>
    <string name="login_sms_quick_login">短信快捷登录</string>
    <string name="login_alter_pwd_hint">请设置您的密码</string>
    <string name="login_set_pwd_back_hint">为了保障您的账户安全，请完成密码设置</string>
    <string name="login_register">立即注册</string>
    <string name="register_account">快速注册</string>
    <string name="login_idcard_hint">请输入身份证后6位</string>
    <string name="login_quick_login">快速登录</string>
    <string name="error_field_must_not_be_empty">输入不能为空</string>

    <string name="lockscreen_access_pattern_start">"开始绘制图案"</string>
    <string name="lockscreen_access_pattern_cleared">"图案已清除"</string>
    <string name="lockscreen_access_pattern_cell_added">"已添加单元格"</string>
    <string name="lockscreen_access_pattern_detected">"图案绘制完成"</string>

    <!-- Homepage -->
    <string name="main_tab_home">首页</string>
    <string name="main_tab_loan">贷款</string>
    <string name="main_tab_find">发现</string>
    <string name="main_tab_mine">我的</string>
</resources>
